added collection/altered user_admin & user calls
